--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animejs": "^3.0.1",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "gsap": "^2.1.3",
+    "spotify-web-api-js": "^1.2.0",
+    "throttle-debounce": "^2.1.0",
+    "vue": "^2.6.10",
+    "vue-plugin-load-script": "^1.2.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
@@ -18,6 +24,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "sass": "^1.20.3",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
