--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animejs": "^3.0.1",
     "core-js": "^2.6.5",
     "gsap": "^2.1.3",
+    "howler": "^2.1.2",
     "spotify-web-api-js": "^1.2.0",
     "throttle-debounce": "^2.1.0",
     "vue": "^2.6.10",
